<resources>
    <string name="app_name">Швейная мастерская</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="formuls">
        <item>Формулы :</item>
        <item>Юбка солнце</item>
        <item>Юбка колокол</item>
        <item>Юбка клиньевая</item>
        <item>Юбка 1/2 солнца</item>
        <item>Юбка 3/4 солнца</item>
        <item>Нагрудная выточка</item>
        <item>Тальевая выточка</item>
    </string-array>
    <string name="DefektiPlechi">
        Основными  признаками  хорошей  посадки  изделия  на  фигуре  являются\n
равновесное положение основных деталей, гладкость поверхности изделия (от-\n
сутствие заломов, морщин, перекосов), а также горизонтальное положение низа изделия.\n
В изделии хорошего качества должно быть соответствие его размеров и\n
формы  опорным  участкам  поверхности  тела  человека.  При  этом  свободные\n
участки  деталей  одежды  ниже  опорных  должны  ниспадать  легко  и  не-\n
принужденно. Конструктивные и декоративные линии, идущие вдоль деталей,\n
должны располагаться строго вертикально или могут иметь отклонение от вер-\n
тикального положения на ± 1,0 - 1,5 °, что практически незаметно для глаза; ли-\n
нии низа, талии, бедер - горизонтально или иметь отклонение в готовом изде-\n
лии не более 1/100 длины изделия.\n
Короткая спинка приводит к тому, что изделие как бы повернуто в сторо-\n
ну спинки. Передние детали в распашных изделиях внизу расходятся; воротник\n
отстает от шеи, и спинка вздернута внизу; боковые швы смещены назад (рисунок 1).
    </string>
    <string name="DefektiPlechi2">
        Указанный дефект наиболее сильно выявляется на сутулой фигуре. Для\n
его устранения предлагаются следующие способы:\n
•  перекалывание бокового шва, при этом удлиняется боковая часть изделия;\n
•  поворот  верхней  части  спинки  относительно  нижней  с  целью  удли-\n
нения ее средней части (рисунок 2);\n
•  поворот  верхней  части  полочки  относительно  нижней.  Шаблон  по-\n
лочки разрезают и поворачивают относительно центра, который находится на\n
пересечении линии груди и вертикальной касательной к пройме переда (рисунок 2);\n
•  при наличии ни спинке кокетки или рельефных швов уточняется вы-\n
пуклость на лопатки.
    </string>
    <string name="DefektiPlechi3">
        При длинной спинке изделие повернуто в сторону переда; спинка внизу \n
прилегает к ногам; передние детали внизу заходят одна на другую и боковые \n
швы смещены вперед (рисунок 3).
    </string>
    <string name="DefektiPlechi4">
        Данный дефект наиболее сильно проявляется на фигуре с перегибистой\n
осанкой.  Вариант  исправления  дефекта  противоположен  описанному  выше  и\n
заключается в следующем: \n
•  укорочение и заужение спинки;\n
•  удлинение и расширение переда (полочки);\n
•  одновременное исправление обеих деталей\n
Для  устранения  дефекта  укорачивают  спинку  в  верхней  части  или  сме-\n
щают ее вниз вдоль бокового шва. \n
Короткий перед приводит к тому, что в готовом изделии передние детали\n
внизу вздернуты вверх и заходят одна на другую; от горловины к боковому шву\n
идут косые заломы; воротник отстает от щей. Для устранения дефекта удлиня-\n
ют верхнюю часть переда или перемещают его вверх вдоль бокового шва. \n
Следует помнить, что передние детали изделия могут расходиться внизу \n
по ряду причин (рисунок 3): \n
•  вершина  бокового  среза  переда  поставлена  выше  вершины  бокового \n
среза спинки (переднюю деталь опускают вниз, рисунок 3 (слева);\n
•  вершина   горловины   переда   смещена   в   сторону   горловины (пле-\n
чевой срез переда перемещают в сторону проймы, рисунок 3 (справа); \n
•  сутюживание  передних  деталей  в  области  груди  или  их  посадка  на\n
кромку  недостаточны (увеличивают  угол  сутюживания  или  предусматривают \n
   большую величину посадки на кромку); \n
•  недостаточен раствор нагрудной вытачки; \n
•  изделие заужено в области бедер. \n
Если борта передних деталей в готовом изделии заходят друг на друга, то\n
для исправления дефекта необходимо выполнить операций, противоположные \n
указанным выше.\n
        Нарушение равновесия рукава является следствием многих причин. Так, \n
если неправильно определено положение надсечек на окате рукава или пройме, \n
это приводит к отклонению рукава вперед или назад. \n
Если рукав втачан со смещением назад, то образуются поперечные зало-\n
мы по линии переднего переката. Для устранения дефекта на окате рукава пе-\n
ремещают в направлении хода часовой стрелки. \n
Если рукав втачан со смещением вперед, то при нормальном положении \n
рук образуются заломы по локтевому перекату. Необходимо сместить надсечки\n
по окату рукава против хода часовой стрелки. \n
Дефекты  в  изделиях  рассматривают  с  трех  позиций:  их  внешний  вид,\n
причины и способы устранения. Часто выделяют дефекты по различному виду \n
складок (заломов). \n
Так, в рукаве могут быть горизонтальные и наклонные складки по окату.\n
Горизонтальные  складки  в  верхней  части  оката  рукава  являются  следствием\n
увеличенной высоты оката или заужения оката (чаще то и другое одновремен-\n
но). Для устранения дефекта необходимо уменьшить высоту оката и расширить \n
рукав на уровне примерно середины высоты его оката. \n
Наклонные (косые)  складки  по  окату  рукава  от  его  вершины  появ-\n
ляются из-за недостаточной высоты оката. Увеличить высоту оката можно, ли-\n
бо выпустив припуск в верхней части оката, либо углубив окат в нижней части.\n
Необходимо одновременно уточнить длину рукава.
    </string>
    <string name="DefektiPlechi5">
        Может наблюдаться вздергивание низа короткого рукава. Причиной яв-\n
ляется также недостаточная высота оката. В этих случаях увеличивают высоту \n
оката рукава или углубляют рукав в нижней части его оката. \n
Возможно закручивание рукава по отношению к руке. Этот дефект воз-\n
никает в двухшовном рукаве, если вершина локтевого среза нижней части ру-\n
кавд в чертеже находится ниже вершины локтевого шва верхней части рукава. \n
Для устранения дефекта необходимо выложить обе части рукава, стачанные по \n
переднему срезу, так, чтобы на всем протяжении переднего переката сохраня-\n
лось постоянным расстояние от среза до сгиба рукава (рисунок 4 (слева); затем сле-\n
дует скорректировать обе части рукава.  \n
Неточности построения горловины приводят к следующим дефектам:\n
•  воротник отстает от шеи по всему периметру (уменьшают разме-\n
ры горловины и воротника, рисунок 4 (справа); \n
•  воротник  отстает  от  шеи  по  горловине  спинки  при  излишней  ее\n
глубине (уменьшают ширину горловины спинки, рисунок 5 (слева); \n
•  воротник излишне плотно прилегает к шее на участке спинки при\n
длинной спинке в верхней части (увеличивают ширину горловины спинки, рисунок 5 (справа).
    </string>
    <string name="DefektiPlechi6">
        Горизонтальные складки под воротником на спинке образуются при уд-\n
линенности средней части спинки от линии горловины до линии проймы и од-\n
новременно слишком большом наклоне плечевых срезов (увеличивают глубину\n
горловины спинки и уменьшают наклон плечевых срезов (рисунок 6 а), при\n
покатых плечах уменьшают наклон плечевого среза спинки (рисунок 6 б).\n
Косые заломы на спинке под проймой, направленные к лопаткам, возни-\n
кают от недостаточного наклона плечевых срезов спинки (рисунок 6 (справа)) (уве-\n
личивают наклон плечевых срезов и при необходимости углубляют пройму).\n
Наклонные заломы у проймы переда, идущие к горловине, возникают при\n
излишней  длине  боковой  части  переда  и  недостаточном  растворе  нагрудной\n
вытачки (увеличивают наклон плечевого среза переда, углубляют пройму, со-\n
кращают  боковой  шов,  увеличивают  раствор  нагрудной  вытачки,  рисунок 7 (слева)).\n
Веерообразные заломы по линии талии у среднего шва спинки, боковых и\n
рельефных  швов  в  приталенных  изделиях  возникают  при  излишнем  прогибе\n
боковых срезов (рисунок 7 (справа)) (уменьшают прогиб срезов, а также вводят до-\n
полнительные линии членения для сохранения ширины изделия по линии талии).\n
    </string>
</resources>